added a hover function for a h1 tag in jquery for fun

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
   <!--  -->
   <link type='text/css' rel="stylesheet" href="./assets/css/style.css">
-  <title>Crystals Collector - Week 4 HW</title>
+  <title>Puppy (Crystals) Collector - Week 4 HW</title>
 </head>
 
 <body>
   <header id="titleBlock" class="box titleblock">
-    <h1>Crystals Collector</h1>
+    <h1 id="h1Text">Crystals Collector</h1>
     <hr class="hrLine">
   </header>
   <!--  -->
