final touch ups

--- a/index.html
+++ b/index.html
@@ -20,25 +20,29 @@
     <hr class="hrLine">
   </header>
   <!--  -->
-  <div id="infoBlock" class="box discription">
+  <div id="infoBlock" class="discription">
     <p> Welcome to the Puppy Collector! This is an interactive game in which you will attempt to match your number of points
       to the total points already displayed.</p>
     <!--  -->
     <p>The puppies below are assingned random values and when clicked, those values are added together.</p>
     <!--  -->
-    <p>Do your best to match, but don' t go too high or you 'll lose all your valuable puppy points! GOOD LUCK!</p>
+    <p>Do your best to match, but don' t go too high or you 'll lose all your valuable puppies you monster! GOOD LUCK!</p>
   </div>
   <!--  -->
-  <div id="numRan" class="box">
-    <div>Score</div>
-  </div>
-  <!--  -->
-  <div id="scoreBlock" class="box scoreBox">
-    <div id="wins" class="sbStyle">Wins:
-      <div id="winsDiv"></div>
+  <div class="groupText">
+    <div class="box">Puppies To Rescue:
+      <div id="numRan" class="box">
+
+      </div>
     </div>
-    <div id="losses" class="sbStyle">Losses:
-      <div id="lossesDiv"></div>
+    <!--  -->
+    <div id="scoreBlock" class="box scoreBox">
+      <div id="wins" class="sbStyle">Wins:
+        <div id="winsDiv"></div>
+      </div>
+      <div id="losses" class="sbStyle">Losses:
+        <div id="lossesDiv"></div>
+      </div>
     </div>
   </div>
   <!--  -->
@@ -49,7 +53,7 @@
     <img src="assets/images/dog-4.png" alt="dog-head-4" id="dog4" class="iconItem">
   </div>
   <!--  -->
-  <div id="pointText" class="box">Your total score is:
+  <div id="pointText" class="box groupText">Puppies Saved:
     <div id="myPoints" class="box"></div>
   </div>
   <!--  -->
