fun with animations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!--  -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
   <!--  -->
   <link type='text/css' rel="stylesheet" href="./assets/css/style.css">
@@ -47,10 +48,10 @@
   </div>
   <!--  -->
   <div id="jemBlock" class="iconBox">
-    <img src="assets/images/dog-1.png" alt="dog-head-1" id="dog1" class="iconItem">
-    <img src="assets/images/dog-2.png" alt="dog-head-2" id="dog2" class="iconItem">
-    <img src="assets/images/dog-3.png" alt="dog-head-3" id="dog3" class="iconItem">
-    <img src="assets/images/dog-4.png" alt="dog-head-4" id="dog4" class="iconItem">
+    <img src="assets/images/dog-1.png" alt="dog-head-1" id="dog1" class="iconItem animated fadeInLeft">
+    <img src="assets/images/dog-2.png" alt="dog-head-2" id="dog2" class="iconItem animated fadeInUp">
+    <img src="assets/images/dog-3.png" alt="dog-head-3" id="dog3" class="iconItem animated fadeInDown">
+    <img src="assets/images/dog-4.png" alt="dog-head-4" id="dog4" class="iconItem animated fadeInRight">
   </div>
   <!--  -->
   <div id="pointText" class="box groupText">Puppies Saved:
